# caelterra

./: .env.example  .gitattributes  .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPRECATED.md  README.md  SOUL.md  __init__.py  eslint.config.mjs  git_utils.py  install.sh  package-lock.json  package.json  plugin.yaml  pnpm-lock 2.yaml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.github/workflows/: eval.yml  publish-npm.yml  release.yml  skill-validation.yml  test.yml
analyse-app-logs/: SKILL.md
analyse-app-logs/references/: filter-logs.md  search-logs.md
archive/: SKILL.md
assets/spec/: question-schema.json
commit/: SKILL.md
docs/: README.md  architecture.md  conventions.md  project-structure.md  setup.md  tech-stack.md  testing.md  workflows.md
docs-to-voice/: SKILL.md
docs/architecture/: cli-architecture.md  skill-structure.md
docs/features/: catalog-maintenance.md  platform-automation.md  research-and-content.md  skill-installation.md  software-development.md
feature-propose/: SKILL.md
fix/: SKILL.md
implement-with-subagents/: SKILL.md
init-project-html/: SKILL.md
katex/: SKILL.md
learning-error-book/: SKILL.md
lib/: installer.ts  tool-runner.ts
novel-to-short-video/: SKILL.md
open-github-issue/: SKILL.md
openai-text-to-image-storyboard/: SKILL.md
qa/: SKILL.md
read-github-issue/: SKILL.md
resolve-review-comments/: SKILL.md
scripts/: env-utils.mjs  install_skills.sh  optimize.mjs  question-utils.mjs  rewrite-imports.mjs  run-evals.mjs  score.mjs  test.sh
skills/qa/: SKILL.md
spec/: SKILL.md
test/: architecture-script.test.js  atlas-cli.test.js  atlas-render.test.js  atlas-state.test.js  banner-animation.test.js  banner-utils.test.js  coverage-enforcement.test.js  installer.test.js  log-utils.test.js  prompts.test.js  quality-gate-workflows.test 2.js  quality-gate-workflows.test.js  registry-utils.test.js  skill-discovery.test.js  stdio-writer.test.js  terminal-more.test.js  tool-runner.test.js  updater-extras.test.js
tests/: conftest.py  test_git_utils.py  test_sync.py
text-to-short-video/: SKILL.md
update-project-html/: SKILL.md
weekly-financial-event-report/: SKILL.md
(+520 files in other folders)
