[project]
name = "caelterra"
version = "0.1.2"
description = "Caelterra — Team standardisation plugin for Hermes"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "LaiTszKin", email = "laitszkin1206@gmail.com" }]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.16",
    "black>=25",
    "pre-commit>=4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
target-version = ["py310"]
line-length = 100
